app/service-b/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-b
spec:
  replicas: 4
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: itaigendler/service-b:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      analysis:
        templates:
          - templateName: service-b-success-rate
      canaryService: service-b-canary
      steps:
        - setWeight: 20
        - pause:
            duration: 20
        - setWeight: 40
        - pause:
            duration: 20
        - setWeight: 60
        - pause:
            duration: 20
        - setWeight: 80
        - pause:
            duration: 20
