app/service-b/service.canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: service-b
