app/service-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-b
  annotations:
    ingress.kubernetes.io/proxy-body-size: 300M
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: service-b.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80
